--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 # example netlify.toml
 [build]
-  command = "npm run build"
-  functions = "netlify/functions"
-  publish = "dist"
+  command = "cd .wasp/build/web-app && npm install && npm run-script build"
+  publish = ".wasp/build/web-app/build"
+
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
